First commit/push

--- a/index.html
+++ b/index.html
@@ -3,13 +3,76 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>LiveLab 4 Demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sustainable Travel</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  Hello world
+  <!-- Navigation bar -->
+  <nav>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#destinations">Destinations</a></li>
+      <li><a href="#tips">Tips</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero section (Home) -->
+  <header id="home" class="hero">
+    <h1>Explore Sustainable Travel</h1>
+    <p>Join us in discovering eco-friendly destinations and tips for a greener journey.</p>
+    <a href="#destinations" class="cta-button">Learn More</a>
+    <!-- Example image for the hero section -->
+  </header>
+
+  <!-- Destinations Section -->
+  <section id="destinations" class="main-section">
+    <h2>🌍 Destinations</h2>
+    <p>Discover amazing places that are eco-friendly and support sustainable tourism.</p>
+    <!-- Simple destination cards -->
+    <div class="simple-cards">
+      <!-- Card 1 -->
+      <div class="simple-card">
+        <!-- Image with a colored border -->
+        <div class="card-image-border">
+          <img src="img/green-valley.jpg" alt="Green Valley" class="card-image">
+        </div>
+        <h3>🏞️ Green Valley</h3>
+        <p>Beautiful nature trails and eco-lodges.</p>
+      </div>
+      <!-- Card 2 -->
+      <div class="simple-card">
+        <div class="card-image-border">
+          <img src="img/coral-coast.jpg" alt="Coral Coast" class="card-image">
+        </div>
+        <h3>🏝️ Coral Coast</h3>
+        <p>Clean beaches and local conservation.</p>
+      </div>
+      <!-- Card 3 -->
+      <div class="simple-card">
+        <div class="card-image-border">
+          <img src="img/forest-retreat.jpg" alt="Forest Retreat" class="card-image">
+        </div>
+        <h3>🌲 Forest Retreat</h3>
+        <p>Treehouses and protected forests.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Tips Section -->
+  <section id="tips" class="main-section">
+    <h2>💡 Tips</h2>
+    <p>Learn how to travel responsibly and reduce your environmental impact.</p>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="main-section">
+    <h2>✉️ Contact</h2>
+    <p>Have questions or suggestions? Reach out to us!</p>
+  </section>
+
   <script src="script.js"></script>
 </body>
 
